--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       media="(min-width: 768px)"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/fonts/fonts.css" />
     <title>Nezu Kiosk</title>
   </head>
   <body>
