feat: premium glassmorphism theme, printing fixes and deployment prep

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
     <link
       rel="preload"
-      href="/images/logo.avif"
+      href="/images/logo_color.avif"
       as="image"
       type="image/avif"
       fetchpriority="high"
-      media="(min-width: 768px)"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/fonts/fonts.css" />
